fixed button spacing and alignments (#171)

--- a/client/src/components/AddUser.css
+++ b/client/src/components/AddUser.css
@@ -1,4 +1,5 @@
 #add-user {
   width: 110px;
   margin-left: 15px;
+  float: right;
 }
