--- a/client/src/components/DownloadDataButton/styles.css
+++ b/client/src/components/DownloadDataButton/styles.css
@@ -1,8 +1,3 @@
-#add-item {
-  width: 100px;
-  margin-left: 15px;
-}
-
 .ui.modal {
   width: 60%;
 }
@@ -15,18 +10,6 @@ div .header {
   text-align: center;
 }
 
-#modal-actions {
-  display: flex;
-  justify-content: center;
-}
-
 body.dimmed.dimmable {
   overflow-y: scroll !important;
-}
-
-@media (max-width: 425px) {
-  #add-item {
-    width: 100px;
-    margin-left: 0;
-  }
 }
